default/objects/Unify_CC_LogStorage__b/Unify_CC_LogStorage__b.object-meta.xml
<CustomObject>
    <label>Unify CC LogStorage</label>
    <pluralLabel>Unify CC LogStorages</pluralLabel>
</CustomObject>