default/objects/Unify_CC_LogStorage__b/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_ID__c</fullName>
    <label>Entity ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>