default/objects/Unify_CC_LogStorage__b/fields/RecordDateTime__c.field-meta.xml
<CustomField>
	<fullName>RecordDateTime__c</fullName>
    <label>RecordDateTime</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>